--- a/src/App.css
+++ b/src/App.css
@@ -7,8 +7,8 @@
 body {
     background-image: linear-gradient(120deg, #f6d365 0%, #fda085 100%);
     color: white;
-    font-family: "Poppins", sans-serif;
-    min-height: 100vh;
+    font-family: sans-serif;
+    min-height: 200vh;
 }
 
 header {
@@ -16,8 +16,14 @@ header {
 }
 
 header,
+h2 {
+    display: flex;
+    flex-direction: column;
+}
+
+header,
 form {
-    min-height: 200px;
+    min-height: 100px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -25,7 +31,7 @@ form {
 
 form input,
 form button {
-    padding: 0.5rem;
+    padding: 5px;
     font-size: 2rem;
     border: none;
     background: white;
@@ -45,23 +51,25 @@ form button:hover {
 
 .todo-container {
     display: flex;
+    max-width: 200em;
     justify-content: center;
     align-items: center;
 }
 
 .todo-list {
     min-width: 30%;
-    list-style: none;
+    /* list-style: disc; */
 }
 
 .todo {
-    margin: 0.5rem;
+    padding: 0.5em;
+    margin: 0.5em;
     background: white;
     font-size: 1.5rem;
     color: black;
     display: flex;
-    flex-direction: column;
-    justify-content: space-around;
+    flex-direction: row;
+    justify-content: space-between;
     align-items: center;
     transition: all 1s ease;
 }
@@ -107,22 +115,16 @@ form button:hover {
     opacity: 0.5;
 }
 
-
-/*CUSTOM SELECTOR */
-
-select {
+.select {
     -webkit-appearance: none;
     -moz-appearance: none;
     -ms-appearance: none;
     appearance: none;
     outline: 0;
-    box-shadow: none;
+    box-shadow: teal;
     border: 0 !important;
     background-image: none;
 }
-
-
-/* Custom Select */
 
 .select {
     margin: 1rem;
@@ -132,13 +134,10 @@ select {
 
 select {
     color: #ff6f47;
-    font-family: "Poppins", sans-serif;
+    font-family: sans-serif;
     cursor: pointer;
     width: 12rem;
 }
-
-
-/* Arrow */
 
 .select::after {
     content: "\25BC";
@@ -150,13 +149,3 @@ select {
     cursor: pointer;
     pointer-events: none;
 }
-
-
-/* Transition */
-
-
-/*
-.select:hover::after {
-  transform: scale(1.5);
-}
-*/
